Set up "other" menu for services layout

--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -315,3 +315,6 @@ other = "WEBSITE"
 
 [topwwdwebsitetext]
 other = "Modern, standards-based websites that benefit your business, whether starting from zero, or localization of an existing website."
+
+[other]
+other = "Others"
