--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -1,3 +1,6 @@
+[compName]
+other = "eSolia"
+
 [langName]
 other = "English"
 
@@ -318,3 +321,9 @@ other = "Modern, standards-based websites that benefit your business, whether st
 
 [other]
 other = "Others"
+
+[toplongblurb]
+other = "eSolia is an Information Technology management firm based in Tokyo, that has been providing high-quality business-focused consulting, project and outsourcing services since 1999.<br><br>We serve a variety of blue-chip foreign and Japanese organizations in Japan, the Asia Pacific region and around the world. We are a globally-minded organization that focuses on the challenges of multi-cultural, multi-language environments, and have a successful track record in handling complex high-pressure projects.<br><br>We have the confidence to find solutions for all your system and process challenges.<br<br>>At eSolia, we build on strong foundations – let us develop a long-term relationship together."
+
+[strongfoundations]
+other = "Strong Foundations"
