Adjusting info request to a single location.

--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -327,3 +327,9 @@ other = "eSolia is an Information Technology management firm based in Tokyo, tha
 
 [strongfoundations]
 other = "Strong Foundations"
+
+[infoformtitle]
+other = "Request More Information"
+
+[infoformblurb]
+other = "Interested in getting our help with this service or solution? Please [contact us today](/info-request/)."
