--- a/i18n/ja.toml
+++ b/i18n/ja.toml
@@ -327,3 +327,9 @@ other = "株式会社イソリアは1999年設立以降東京を拠点に、「I
 
 [strongfoundations]
 other = "強固な基盤"
+
+[infoformtitle]
+other = "お問い合わせ"
+
+[infoformblurb]
+other = "私たちのサービスやソリューションにご興味を頂けましたか？ <br>是非[このフォーム](/info-request/)からご連絡ください！"
