--- a/i18n/ja.toml
+++ b/i18n/ja.toml
@@ -220,6 +220,9 @@ other = "なぜイソリアか？"
 [topsectionwwd]
 other = "主なソリューション"
 
+[topsectionwwdsub]
+other = "幅広いIT"
+
 [topsectionwwdtext]
 other = "イソリアのプロフェショナルスタッフはインフラから、オペレーション、開発、マネージメントとガバナンスまで幅広い範囲にわたるIT活動に対応いたします。貴社の指令、規格と委任に基づいて、貴社が必要とされるニーズに必ずお応えいたします。"
 
