Set menu name to toolslist, and change i18n string

--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -58,7 +58,7 @@ other = "Latest"
 [footerlinks3text]
 other = "Connect with us on social media, or see our latest posts."
 
-[footerlinks4title]
+[esoliatoolstitle]
 other = "eSolia Tools"
 
 [footerlinks5title]
