--- a/i18n/ja.toml
+++ b/i18n/ja.toml
@@ -58,7 +58,7 @@ other = "最新"
 [footerlinks3text]
 other = "ソーシャルメディアでつながりましょう。私たちの最新のブログもご覧ください。"
 
-[footerlinks4title]
+[esoliatoolstitle]
 other = "イソリア ツール"
 
 [footerlinks5title]
