--- a/i18n/ja.toml
+++ b/i18n/ja.toml
@@ -98,10 +98,10 @@ other = "営業の方でしょうか?"
 other = "こちらのフォームでは、営業連絡をお断り致します。"
 
 [gen404message]
-other = "ご記入のページは、当サイトに見つかりません。アドレスが間違ってるか、変更されている場合もあります。下記の一覧からお探しください。ご検討のほど、どうぞよろしくお願いします。"
+other = "イソリアに興味をお持ちいただきまして誠にありがとうございます。お探しのページは、当サイトに見つかりません。アドレスが間違ってるか、変更されている場合もあります。下記の一覧からお探しいただくか、本サイトの[検索機能](/search)又は、[一般お問い合わせフォーム](/info-request/)からお問い合わせください。ご検討のほど、どうぞよろしくお願いします。"
 
 [gen404subtitle]
-other = "ページが見つかりません"
+other = "エラーが発生しました"
 
 [genfeature]
 other = "おすすめ"
