Tweak search page layout (margin, i18n trans) and color highlight mark.js uses

--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -351,3 +351,9 @@ other = "Request More Information"
 
 [infoformblurb]
 other = "Interested in getting our help with this service or solution? Please [contact us today](/info-request/)."
+
+[searchresults]
+other = "Showing results for:"
+
+[readmore]
+other = "Read More"
