Fine tune formatting of search page - form input, color, max width

--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -355,5 +355,8 @@ other = "Interested in getting our help with this service or solution? Please [c
 [searchresults]
 other = "Showing results for:"
 
+[entersearchterm]
+other = "Enter Search Term"
+
 [readmore]
 other = "Read More"
