--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -245,10 +245,10 @@ other = "What We Do"
 other = "Wide Ranging IT"
 
 [topsectionwwdtext]
-other = "eSolia's professional staff handles a wide range of IT activities, from infrastructure, operations, software development, to management and governance. <br><br>You're sure to find that we can cover your needs, and we'll do so following your directives, standards and mandate."
+other = "eSolia's professional staff handles a wide range of IT activities, from infrastructure, operations, software and web development, to management and governance. <br><br>You're sure to find that we can cover your needs, and we'll do so following your directives, standards and mandate."
 
 [topsectionintrotext]
-other = "eSolia is an Information Technology management firm based in Tokyo, that has been providing high-quality business-focused consulting, project and outsourcing services since 1999.<br><br>At eSolia, we build on strong foundations – let us develop a long-term relationship together."
+other = "eSolia is an Information Technology management firm based in Tokyo, that has been providing high-quality business-focused [consulting](/consulting), [project](/project-management) and [outsourcing](/outsourcing) services since 1999.<br><br>At eSolia, we build on strong foundations – let us develop a long-term relationship together."
 
 [topsectiontr]
 other = "Track Record"
@@ -258,6 +258,12 @@ other = "Successful Japan Projects"
 
 [topsectiontrtext]
 other = "We serve a variety of blue-chip foreign and Japanese organizations in Japan, the Asia Pacific region and around the world. We are a globally-minded organization that focuses on the challenges of multi-cultural, multi-language environments, and have a successful track record in handling complex high-pressure projects.<br><br>We have the confidence to find solutions for all your system and process challenges."
+
+[topsectionvideo]
+other = "Introduction Video"
+
+[topsectionvideosub]
+other = "Play & type F for full screen, Esc to exit"
 
 [topslogan]
 other = "Bilingual IT <nobr><wbr>Outsourcing <wbr>Service</nobr>"
