--- a/i18n/ja.toml
+++ b/i18n/ja.toml
@@ -245,10 +245,10 @@ other = "主なソリューション"
 other = "幅広いIT"
 
 [topsectionwwdtext]
-other = "イソリアのプロフェショナルスタッフはインフラから、オペレーション、ソフトウェア開発、マネージメントとガバナンスまで幅広い範囲にわたるIT活動に対応いたします。<br><br>貴社の指令、規格と委任に基づいて、貴社が必要とされるニーズに必ずお応えいたします。"
+other = "イソリアのプロフェショナルスタッフはインフラから、オペレーション、ウェブサイトやソフトウェア開発、マネージメントとガバナンスまで幅広い範囲にわたるIT活動に対応いたします。<br><br>貴社の指令、規格と委任に基づいて、貴社が必要とされるニーズに必ずお応えいたします。"
 
 [topsectionintrotext]
-other = "株式会社イソリアは1999年設立以降東京を拠点に、「ITコンサルティング」、「ITプロジェクト・マネージメント」、「ITアウトソーシング」サービスを、外資系・日本国内の企業のお客様に提供するITマネージメント企業です。<br><br>イソリアは、お客様との末長い関係を築きながら強固な基盤を構築いたします。"
+other = "株式会社イソリアは1999年設立以降東京を拠点に、「[ITコンサルティング](/consulting)」、「[ITプロジェクト・マネージメント](/project-management)」、「[ITアウトソーシング](/consulting)」サービスを、外資系・日本国内の企業のお客様に提供するITマネージメント企業です。<br><br>イソリアは、お客様との末長い関係を築きながら強固な基盤を構築いたします。"
 
 [topsectiontr]
 other = "長年の経験"
@@ -258,6 +258,12 @@ other = "プロジェクト成功"
 
 [topsectiontrtext]
 other = "当社はミックスカルチャーに焦点をあてたグローバル企業であり過去に複雑なプロジェクトを数多く手がけ、クリエイティブな問題解決をお客様へ提供しております。<br><br>これまでの成功実績と経験を基に、貴社のITシステム全般に対するソリューションを見出し、チャレンジを推し進めることに多大な自信を持っています。"
+
+[topsectionvideo]
+other = "紹介ビデオ"
+
+[topsectionvideosub]
+other = "再生し、キーのFで拡大、Escで元に"
 
 [topslogan]
 other = "バイリンガル IT <nobr><wbr>アウトソーシング <wbr>サービス</nobr>"
