Flesh out top page why eSolia text

--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -236,7 +236,7 @@ other = "Why eSolia?"
 other = "Our Value"
 
 [topsectionwhytext]
-other = "About eSolia's value. Work as a team, striving to stand on the side of the client... understand process, hire bilinguals, do good docs, have support systems etc. INCLUDE links about codebook, Sip print, denphone"
+other = "eSolia works as a team, providing you the all the skills a typical IT department has. We hire multilingual professionals, who can communicate effectively with both the HQ IT and Japan business teams, as well as negotiate on your behalf with local vendors. As we perform work to support you, we use our well-developed support systems to document and communicate clearly."
 
 [topsectiontestimonial]
 other = "What they're saying"
