--- a/i18n/ja.toml
+++ b/i18n/ja.toml
@@ -236,7 +236,7 @@ other = "なぜイソリアか？"
 other = "弊社の強み"
 
 [topsectionwhytext]
-other = "日本語 About eSolia's value. Work as a team, striving to stand on the side of the client... understand process, hire bilinguals, do good docs, have support systems etc"
+other = "チーム体制にて、一般的なIT部門が持っているすべてのスキルを提供いたします。異文化環境下での経験を持つマルチリンガルのプロフェショナルな人材の確保に努めており、日本側チームや外国側のチームと効率よくコミュニケーションが取れて、代わりにベンダーとの交渉を行います。サポート作業しながら、長年開発された当社の支援システムを使い、ドキュメント作成や標準化されたレポートも提供致します。"
 
 [topsectiontestimonial]
 other = "お客様の声"
