Translate home stats section and add to i18n file
Fixes #12

--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -450,3 +450,24 @@ other = "Content in topic: "
 
 [topicsListBrowse]
 other = "See All Topics: "
+
+[topstatspros]
+other = "Pros Per Account"
+
+[topstatspart]
+other = "Trusted Partners"
+
+[topstatsprin]
+other = "Principals' Years of Experience"
+
+[topstatstick]
+other = "Tickets Resolved Annually"
+
+[topstatsbook]
+other = "Hours Booked Over 5 Years"
+
+
+
+
+
+
