--- a/i18n/ja.toml
+++ b/i18n/ja.toml
@@ -2,13 +2,13 @@
 other = "イソリア"
 
 [hqAddress1]
-other = "〒105-0003 東京都港区、"
+other = "〒105-0003 東京都港区西新橋2-2-2"
 
 [hqAddress2]
-other = "西新橋2-2-2、澤ビルディング6F"
+other = "澤ビルディング6F"
 
 [hqAddress]
-other = "〒105-0003 東京都港区、西新橋2-2-2、澤ビルディング6F"
+other = "〒105-0003 東京都港区西新橋2-2-2、澤ビルディング6F"
 
 [eSoliaContacts]
 other = "株式会社イソリア 連絡先情報"
