Fix jp pledge grammar
Fixes #14

--- a/i18n/ja.toml
+++ b/i18n/ja.toml
@@ -242,10 +242,10 @@ other = "チーム体制にて、一般的なIT部門が持っているすべて
 other = "お客様の声"
 
 [topsectionpledge]
-other = "弊社の誓い"
+other = "弊社の誓いは"
 
 [topsectionpledgesub]
-other = "は弊社の約束"
+other = "弊社の約束"
 
 [topsectionpledgetext]
 other = """
