Correct link on top page from /news to /post
Fixes #22

--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -299,7 +299,7 @@ other = "Information"
 other = "The latest short posts from eSolia"
 
 [topsectioninfotext]
-other = "See also the [full list of posts](/news)."
+other = "See also the [full list of posts](/post)."
 
 [newsarchivearticlesbyyear]
 other = "Articles by Year"
