Customize post section layout and give link to news top in sidebar
Fixes #32

--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -307,6 +307,9 @@ other = "Articles by Year"
 [newsarchiveshortposts]
 other = "Short Posts"
 
+[newsarchivemenu]
+other = "News"
+
 [topslogan]
 other = "Bilingual IT Outsourcing Service"
 
