--- a/i18n/ja.toml
+++ b/i18n/ja.toml
@@ -290,7 +290,7 @@ other = "プロジェクト"
 other = "最近完了した一覧"
 
 [topsectionprojectstext]
-other = "全プロジェクト含まれてる一覧も[ご覧ください](/success-stories)。"
+other = "全プロジェクト含まれてる[一覧](/success-stories)も、[RSSフィード](https://pro.dbflex.net/secure/public/db/15331/rss.ashx?view=3456963&user=40863e67a24a41e281eac29548bc68b2)もご覧ください。"
 
 [topsectioninfo]
 other = "情報"
@@ -299,7 +299,7 @@ other = "情報"
 other = "イソリアより、最新のショートポスト"
 
 [topsectioninfotext]
-other = "全ポスト含まれてる一覧も[ご覧ください](/post)。"
+other = "全ポスト含まれてる[一覧](/post)も、[RSSフィード](https://pro.dbflex.net/secure/public/db/15331/rss.ashx?view=3461317&user=40863e67a24a41e281eac29548bc68b2)もご覧ください。"
 
 [newsarchivearticlesbyyear]
 other = "記事"
