Added inner links to top page. Fixes #57

--- a/i18n/ja.toml
+++ b/i18n/ja.toml
@@ -236,7 +236,7 @@ other = "なぜイソリアか？"
 other = "弊社の強み"
 
 [topsectionwhytext]
-other = "チーム体制にて、一般的なIT部門が持っているすべてのスキルを提供いたします。異文化環境下での経験を持つマルチリンガルのプロフェショナルな人材の確保に努めており、日本側チームや外国側のチームと効率よくコミュニケーションが取れて、代わりにベンダーとの交渉を行います。サポート作業しながら、長年開発された当社の支援システムを使い、ドキュメント作成や標準化されたレポートも提供致します。"
+other = "[チーム体制にて](/why-esolia)、一般的なIT部門が持っているすべてのスキルを提供いたします。異文化環境下での経験を持つマルチリンガルのプロフェショナルな人材の確保に努めており、日本側チームや外国側のチームと効率よくコミュニケーションが取れて、代わりにベンダーとの交渉を行います。<br><br>サポート作業しながら、長年開発された当社の支援システムを使い、ドキュメント作成や標準化されたレポートも、ご提供致します。"
 
 [topsectiontestimonial]
 other = "お客様の声"
@@ -263,7 +263,7 @@ other = "主なソリューション"
 other = "幅広いIT"
 
 [topsectionwwdtext]
-other = "イソリアのプロフェショナルスタッフはインフラから、オペレーション、ウェブサイトやソフトウェア開発、マネージメントとガバナンスまで幅広い範囲にわたるIT活動に対応いたします。<br><br>貴社の指令、規格と委任に基づいて、貴社が必要とされるニーズに必ずお応えいたします。"
+other = "イソリアのプロフェショナルスタッフは[IT インフラ](/infrastructure)やオペレーションから、[ウェブサイト デザイン](/website-design)や[データベース開発](/prodb)、[マネージメント](/management)とガバナンスまでの、幅広い範囲にわたるIT活動に対応いたします。<br><br>貴社の指令、規格と委任に基づいて、貴社が必要とされるニーズに必ずお応えいたします。"
 
 [topsectionintrotext]
 other = "株式会社イソリアは1999年設立以降東京を拠点に、「[ITコンサルティング](/consulting)」、「[ITプロジェクト・マネージメント](/project-management)」、「[ITアウトソーシング](/consulting)」サービスを、外資系・日本国内の企業のお客様に提供するITマネージメント企業です。<br><br>イソリアは、お客様との末長い関係を築きながら強固な基盤を構築いたします。"
@@ -275,7 +275,7 @@ other = "長年の経験"
 other = "プロジェクト成功"
 
 [topsectiontrtext]
-other = "当社はミックスカルチャーに焦点をあてたグローバル企業であり過去に複雑なプロジェクトを数多く手がけ、クリエイティブな問題解決をお客様へ提供しております。<br><br>これまでの成功実績と経験を基に、貴社のITシステム全般に対するソリューションを見出し、チャレンジを推し進めることに多大な自信を持っています。"
+other = "当社はミックスカルチャーに焦点をあてたグローバル企業であり過去に複雑なプロジェクトを数多く手がけ、クリエイティブな問題解決と[プロジェクト管理](/project-management)をお客様へ提供しております。<br><br>これまでの[成功実績](/success-stories)と経験を基に、貴社のITシステム全般に対するソリューションを見出し、チャレンジを推し進めることに多大な自信を持っています。"
 
 [topsectionvideo]
 other = "紹介ビデオ"
