--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -236,7 +236,7 @@ other = "Why eSolia?"
 other = "Our Value"
 
 [topsectionwhytext]
-other = "eSolia works as a team, providing you the all the skills a typical IT department has. We hire multilingual professionals, who can communicate effectively with both the HQ IT and Japan business teams, as well as negotiate on your behalf with local vendors. As we perform work to support you, we use our well-developed support systems to document and communicate clearly."
+other = "[eSolia works as a team](why-esolia), providing you all the skills a typical IT department has. We hire multilingual professionals, who can communicate effectively with both the HQ IT and Japan business teams, as well as negotiate on your behalf with local vendors, who won't speak your language. <br><br>As we perform work to support you, we use our well-developed support systems to document and communicate clearly."
 
 [topsectiontestimonial]
 other = "What they're saying"
@@ -263,7 +263,7 @@ other = "What We Do"
 other = "Wide Ranging IT"
 
 [topsectionwwdtext]
-other = "eSolia's professional staff handles a wide range of IT activities, from infrastructure, operations, software and web development, to management and governance. <br><br>You're sure to find that we can cover your needs, and we'll do so following your directives, standards and mandate."
+other = "eSolia's professional staff handles a wide range of IT activities, from [infrastructure](/infrastructure) and operations, [website design](/website-design) and [database development](/prodb), to [management](/management) and governance. <br><br>You're sure to find that we can cover your needs, and we'll do so following your directives, standards and mandate."
 
 [topsectionintrotext]
 other = "eSolia is an Information Technology management firm based in Tokyo, that has been providing high-quality business-focused [consulting](/consulting), [project](/project-management) and [outsourcing](/outsourcing) services since 1999.<br><br>At eSolia, we build on strong foundations – let us develop a long-term relationship together."
@@ -275,7 +275,7 @@ other = "Track Record"
 other = "Successful Japan Projects"
 
 [topsectiontrtext]
-other = "We serve a variety of blue-chip foreign and Japanese organizations in Japan, the Asia Pacific region and around the world. We are a globally-minded organization that focuses on the challenges of multi-cultural, multi-language environments, and have a successful track record in handling complex high-pressure projects.<br><br>We have the confidence to find solutions for all your system and process challenges."
+other = "We serve a variety of blue-chip foreign and Japanese organizations in Japan, the Asia Pacific region and around the world. We are a globally-minded organization that focuses on the challenges of multi-cultural, multi-language environments, and have a [successful track record](/success-stories) in [handling](/project-management) complex high-pressure projects.<br><br>We have the confidence to find solutions for all your system and process challenges."
 
 [topsectionvideo]
 other = "Introduction Video"
