Convert vimeo to link instead of embed, and make shortcode
Use on greeting and home page

Fixes #61

--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -284,7 +284,7 @@ other = "We serve a variety of blue-chip foreign and Japanese organizations in J
 other = "Introduction Video"
 
 [topsectionvideosub]
-other = "Play & type F for full screen, Esc to exit"
+other = "Click image to open video:"
 
 [topsectionprojects]
 other = "Projects"
