Add link to emergency contacts in footer

--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -142,6 +142,9 @@ other = "Home"
 [gencolophonname]
 other = "Colophon"
 
+[genjpcontactsname]
+other = "Japan Emergency Contacts"
+
 [genlicensename]
 other = "License"
 
