Add イソリア after name so that Apple Maps will pick it up...
Want people to be able to search apple maps for name, but, you can do only one
entry. If you put it as bilingual like "eSolia イソリア", then they return an
error unless that string is locate-able. So, add it to one of the paras to
see if it will work.

Signed-off-by: Rick Cogley <rick.cogley@esolia.co.jp>

--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -275,7 +275,7 @@ other = "Wide Ranging IT"
 other = "eSolia's professional staff handles a wide range of IT activities, from [infrastructure](/infrastructure) and operations, [website design](/website-design) and [database development](/prodb), to [management](/management) and governance. <br><br>You're sure to find that we can cover your needs, and we'll do so following your directives, standards and mandate."
 
 [topsectionintrotext]
-other = "eSolia is an Information Technology management firm based in Tokyo, that has been providing high-quality business-focused [consulting](/consulting), [project](/project-management) and [outsourcing](/outsourcing) services since 1999.<br><br>At eSolia, we build on strong foundations – let us develop a long-term relationship together."
+other = "eSolia イソリア is an Information Technology management firm based in Tokyo, that has been providing high-quality business-focused [consulting](/consulting), [project](/project-management) and [outsourcing](/outsourcing) services since 1999.<br><br>At eSolia, we build on strong foundations – let us develop a long-term relationship together."
 
 [topsectiontr]
 other = "Track Record"
