change sougyo to souritsu, since that is what is used for companies
Signed-off-by: Rick Cogley <rick.cogley@esolia.co.jp>

--- a/i18n/ja.toml
+++ b/i18n/ja.toml
@@ -47,7 +47,7 @@ other = "株式会社イソリア All Rights Reserved."
 other = "一般"
 
 [footerlinks1text]
-other = "1999年創業以来、お客様のバーチャルIT部として強固な基盤作りのお手伝いを行っております。"
+other = "1999年創立以来、お客様のバーチャルIT部として強固な基盤作りのお手伝いを行っております。"
 
 [footerlinks2title]
 other = "サービス"
