Update privacy policy
Signed-off-by: Rick Cogley <rick.cogley@esolia.co.jp>

--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -148,6 +148,9 @@ other = "Japan Emergency Contacts"
 [genlicensename]
 other = "License"
 
+[genprivacyname]
+other = "Privacy"
+
 [genlatestfeature]
 other = "Featured Content"
 
