--- a/i18n/ja.toml
+++ b/i18n/ja.toml
@@ -148,6 +148,9 @@ other = "日本緊急連絡先一覧"
 [genlicensename]
 other = "ライセンス"
 
+[genprivacyname]
+other = "プライバシー"
+
 [genlatestfeature]
 other = "おすすめ コンテンツ"
 
