問い合わせ文言修正

--- a/i18n/ja.toml
+++ b/i18n/ja.toml
@@ -434,7 +434,7 @@ other = "お問い合わせ"
 other = "私たちのサービスやソリューションにご興味を頂けましたか？ <br>是非[こちらのフォーム](/info-request/)からご連絡ください！"
 
 [infoformblurb2]
-other = "貴社のこのようなプロジェクトをお任せ頂けますか？<br>是非[こちらのフォーム](/info-request/)からご連絡ください！"
+other = "貴社のプロジェクトもイソリアにお任せ頂けますか？<br>是非[こちらのフォーム](/info-request/)からご連絡ください！"
 
 [searchresults]
 other = "検索した文字列:"
