細かい部分修正

--- a/i18n/ja.toml
+++ b/i18n/ja.toml
@@ -431,7 +431,7 @@ other = "強固な基盤"
 other = "お問い合わせ"
 
 [infoformblurb]
-other = "私たちのサービスやソリューションにご興味を持って頂けましたか？ <br>是非[こちらのフォーム](/info-request/)からご連絡ください！"
+other = "私たちのサービスやソリューションに興味をお持ち頂けましたか？ <br>是非[こちらのフォーム](/info-request/)からご連絡ください！"
 
 [infoformblurb2]
 other = "貴社のプロジェクトもイソリアにお任せ頂けますか？<br>是非[こちらのフォーム](/info-request/)からご連絡ください！"
