Add system uptime links here and there
Signed-off-by: Rick Cogley <rick.cogley@esolia.co.jp>

--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -139,6 +139,9 @@ other = "Gallery"
 [genhomename]
 other = "Home"
 
+[genstatusname]
+other = "System Uptime Status"
+
 [gencolophonname]
 other = "Colophon"
 
