--- a/i18n/ja.toml
+++ b/i18n/ja.toml
@@ -308,10 +308,10 @@ other = "最新のプロジェクト"
 other = "[全てのプロジェクト](/success-stories)、[RSSフィード](https://pro.dbflex.net/secure/public/db/15331/rss.ashx?view=3456963&user=40863e67a24a41e281eac29548bc68b2)もご覧ください。"
 
 [topsectioninfo]
-other = "情報"
+other = "お知らせ"
 
 [topsectioninfosub]
-other = "最新のお知らせ"
+other = "最新の情報、アナウンスなど"
 
 [topsectioninfotext]
 other = "[全てのポスト](/post)、[RSSフィード](https://pro.dbflex.net/secure/public/db/15331/rss.ashx?view=3461317&user=40863e67a24a41e281eac29548bc68b2)もご覧ください。"
