--- a/i18n/ja.toml
+++ b/i18n/ja.toml
@@ -5,13 +5,13 @@ other = "イソリア"
 other = "株主総会イソリア"
 
 [hqAddress1]
-other = "〒105-0003 東京都港区西新橋2-2-2"
+other = "〒105-7105　東京都港区東新橋一丁目５番２号"
 
 [hqAddress2]
-other = "澤ビルディング6F"
+other = "汐留シティセンター５階（Work Styling）"
 
 [hqAddress]
-other = "〒105-0003 東京都港区西新橋2-2-2、澤ビルディング6F"
+other = "〒105-7105　東京都港区東新橋一丁目５番２号　汐留シティセンター５階（Work Styling）"
 
 [eSoliaContacts]
 other = "連絡先情報"
