--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -5,13 +5,13 @@ other = "eSolia"
 other = "eSolia Inc."
 
 [hqAddress1]
-other = "Sawa Bldg. 6F, Nishi-Shimbashi 2-2-2"
+other = "Shiodome City Center 5F (WorkStyling), 1-5-2 Higashi-Shimbashi,"
 
 [hqAddress2]
-other = "Minato-ku, Tokyo, Japan 105-0003"
+other = "Minato-ku, Tokyo, Japan, 105-7105"
 
 [hqAddress]
-other = "Sawa Bldg. 6F, Nishi-Shimbashi 2-2-2, Minato-ku, Tokyo, Japan 105-0003"
+other = "Shiodome City Center 5F (WorkStyling), 1-5-2 Higashi-Shimbashi, Minato-ku, Tokyo, Japan, 105-7105"
 
 [eSoliaContacts]
 other = "Contact Points"
